fixed font size on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -691,6 +691,9 @@ img {
     display: none;
   }
   .PL .whoishe p {
+    font-size: 16px;
+    margin-left: 5%;
+    margin-right: 5%;
     animation-duration: 3s;
     animation-name: slidein;
   }
