--- a/less/about-us.less
+++ b/less/about-us.less
@@ -154,6 +154,9 @@
             display:none;
         }
         p{
+            font-size:16px;
+           margin-left:5%;
+           margin-right:5%;
             animation-duration: 3s;
             animation-name: slidein;
           }
